# ESP-Miner

./: readme.md  sdkconfig.defaults
.github/workflows/: unittest.yml
components/asic/: CMakeLists.txt  asic.c
components/connect/: connect.c
components/connect/include/: connect.h
main/: CMakeLists.txt  Kconfig.projbuild  device_config.c  global_state.h  idf_component.yml  main.c
main/http_server/: http_server.c  openapi.yaml
main/http_server/axe-os/src/app/components/network-edit/: network.edit.component.ts
main/http_server/axe-os/src/app/components/swarm/: swarm.component.html  swarm.component.ts
main/http_server/axe-os/src/app/services/: system.service.ts
main/power/: vcore.c
main/self_test/: self_test.c
main/simulation/: README.md  adc_sim.c  asic_reset_sim.c  asic_sim.c  asic_sim.h  device_config_sim.c  device_config_sim.h  ds4432u_sim.c  ds4432u_sim.h  emc2101_sim.c  emc2101_sim.h  emc2103_sim.c  emc2103_sim.h  ina260_sim.c  ina260_sim.h  serial_sim.c  test_simulations.c  tps546_sim.c  tps546_sim.h
main/thermal/: thermal.c
